fix: Corrigir script report:merge no package.json
- Atualizar caminho de cypress/reports/*.json para cypress/reports/mochawesome/*.json
- Usar npx mochawesome-merge com flag -o em vez de redirecionamento >
- Garantir que os relatórios sejam mesclados corretamente na pipeline

Resolves: Bug na geração de relatórios consolidados

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cy:open:api": "cypress open --e2e --spec \"cypress/e2e/backend/**/*\"",
     "cy:open:frontend": "cypress open --e2e --spec \"cypress/e2e/frontend/**/*\"",
     "cy:open:component": "cypress open --component",
-    "report:merge": "mochawesome-merge cypress/reports/*.json > cypress/reports/merged.json",
+    "report:merge": "npx mochawesome-merge cypress/reports/mochawesome/*.json -o cypress/reports/merged.json",
     "report:generate": "marge cypress/reports/merged.json --reportDir cypress/reports --inline",
     "report:open": "start cypress/reports/merged.html",
     "clean:reports": "rimraf cypress/reports cypress/screenshots cypress/videos",
