fix: Corrigir problemas da pipeline GitHub Actions
🔧 PROBLEMAS CORRIGIDOS:
- Lock file não encontrado: Adicionado package-lock.json ao repositório
- Paths não encontrados: Adicionado 'if-no-files-found: ignore' nos uploads
- Download artifacts: Adicionado 'continue-on-error: true'
- Cache npm: Reativado após adicionar package-lock.json

✨ MELHORIAS:
- Pipeline mais robusta contra falhas de artifacts
- Cache do npm funcionando corretamente
- Estrutura YAML corrigida e validada
- Tratamento adequado de cenários sem screenshots/videos

📋 RESULTADO ESPERADO:
- Eliminação dos warnings de 'No files found'
- Cache do npm acelerando builds
- Pipeline mais estável e confiável

--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ temp/
 *.backup
 
 # Package managers
-package-lock.json
+# package-lock.json  # Comentado - precisamos do lock file para cache do GitHub Actions
 yarn.lock
 pnpm-lock.yaml
 
