--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -39,6 +39,7 @@ jobs:
       with:
         name: cypress-screenshots
         path: cypress/screenshots
+        if-no-files-found: ignore
         
     - name: Upload videos
       uses: actions/upload-artifact@v4
@@ -46,6 +47,7 @@ jobs:
       with:
         name: cypress-videos
         path: cypress/videos
+        if-no-files-found: ignore
         
     - name: Upload test reports
       uses: actions/upload-artifact@v4
@@ -53,6 +55,7 @@ jobs:
       with:
         name: cypress-reports
         path: cypress/reports
+        if-no-files-found: ignore
 
   # Job para geração de relatórios consolidados
   test-summary:
@@ -78,6 +81,7 @@ jobs:
       with:
         name: cypress-reports
         path: cypress/reports
+        continue-on-error: true
         
     - name: Generate combined report
       run: |
