melhoria na geracao de relatorio

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run cy:run",
+    "test": "npm run test:full",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:run:chrome": "cypress run --browser chrome",
@@ -14,10 +14,17 @@
     "cy:run:api": "cypress run --spec \"cypress/e2e/backend/**/*\"",
     "cy:run:smoke": "cypress run --env grepTags=@smoke",
     "cy:run:regression": "cypress run --env grepTags=@regression",
+    "test:full": "npm run clean:reports && npm run cy:run && npm run report:create",
+    "test:api": "npm run clean:reports && npm run cy:run:api && npm run report:create",
+    "test:smoke": "npm run clean:reports && npm run cy:run:smoke && npm run report:create",
+    "test:chrome": "npm run clean:reports && npm run cy:run:chrome && npm run report:create",
     "report:merge": "npx mochawesome-merge cypress/reports/mochawesome/*.json -o cypress/reports/merged.json",
     "report:generate": "marge cypress/reports/merged.json --reportDir cypress/reports --inline",
+    "report:create": "npm run report:merge && npm run report:generate",
     "report:open": "start cypress/reports/merged.html",
-    "clean:reports": "rimraf cypress/reports cypress/screenshots cypress/videos",
+    "report:full": "npm run report:create && npm run report:open",
+    "clean:reports": "node -e \"const fs = require('fs'); const path = require('path'); try { const dir = 'cypress/reports/mochawesome'; if (fs.existsSync(dir)) { fs.readdirSync(dir).filter(f => f.endsWith('.json')).forEach(f => fs.unlinkSync(path.join(dir, f))); } ['cypress/reports/merged.json', 'cypress/reports/merged.html'].forEach(f => { if (fs.existsSync(f)) fs.unlinkSync(f); }); ['cypress/reports/html', 'cypress/reports/cypress'].forEach(d => { if (fs.existsSync(d)) fs.rmSync(d, {recursive: true, force: true}); }); console.log('Relatórios limpos com sucesso!'); } catch(e) { console.log('AVISO - Erro na limpeza:', e.message); }\"",
+    "clean:reports:full": "powershell -Command \"Remove-Item 'cypress/reports' -Recurse -Force -ErrorAction SilentlyContinue; Remove-Item 'cypress/screenshots' -Recurse -Force -ErrorAction SilentlyContinue; Remove-Item 'cypress/videos' -Recurse -Force -ErrorAction SilentlyContinue\"",
     "clean:cache": "cypress cache clear",
     "install:cypress": "cypress install",
     "verify:cypress": "cypress verify",
@@ -41,6 +48,7 @@
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^5.0.0",
     "mochawesome-report-generator": "^6.2.0",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
