--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -122,6 +122,58 @@
 			],
 			"group": "build",
 			"problemMatcher": []
+		},
+		{
+			"label": "Test with Auto Report",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"test:full"
+			],
+			"group": "test",
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true,
+				"clear": false
+			}
+		},
+		{
+			"label": "Test API with Auto Report",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"test:api"
+			],
+			"group": "test",
+			"problemMatcher": []
+		},
+		{
+			"label": "Test and Open Report",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"test:full"
+			],
+			"group": "test",
+			"dependsOrder": "sequence",
+			"dependsOn": [],
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared"
+			},
+			"runOptions": {
+				"runOn": "folderOpen"
+			}
 		}
 	]
 }
