--- a/package.json
+++ b/package.json
@@ -6,25 +6,36 @@
   "scripts": {
     "test": "npm run test:full",
     "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "cy:run:chrome": "cypress run --browser chrome",
-    "cy:run:firefox": "cypress run --browser firefox",
-    "cy:run:edge": "cypress run --browser edge",
-    "cy:run:headless": "cypress run --headless",
-    "cy:run:api": "cypress run --spec \"cypress/e2e/backend/**/*\"",
-    "cy:run:smoke": "cypress run --env grepTags=@smoke",
-    "cy:run:regression": "cypress run --env grepTags=@regression",
-    "test:full": "npm run clean:reports && npm run cy:run && npm run report:create",
-    "test:api": "npm run clean:reports && npm run cy:run:api && npm run report:create",
-    "test:smoke": "npm run clean:reports && npm run cy:run:smoke && npm run report:create",
-    "test:chrome": "npm run clean:reports && npm run cy:run:chrome && npm run report:create",
-    "report:merge": "npx mochawesome-merge cypress/reports/mochawesome/*.json -o cypress/reports/merged.json",
-    "report:generate": "marge cypress/reports/merged.json --reportDir cypress/reports --inline",
-    "report:create": "npm run report:merge && npm run report:generate",
-    "report:open": "start cypress/reports/merged.html",
+    "cy:run": "npm run clean:reports && cypress run && npm run report:create",
+    "cy:run:chrome": "npm run clean:reports && cypress run --browser chrome && npm run report:create",
+    "cy:run:firefox": "npm run clean:reports && cypress run --browser firefox && npm run report:create",
+    "cy:run:edge": "npm run clean:reports && cypress run --browser edge && npm run report:create",
+    "cy:run:headless": "npm run clean:reports && cypress run --headless && npm run report:create",
+    "cy:run:api": "npm run clean:reports && cypress run --spec \"cypress/e2e/backend/**/*\" && npm run report:create",
+    "cy:run:frontend": "echo \"Frontend tests not available. Use: npm run cy:run:api\"",
+    "cy:run:smoke": "npm run clean:reports && cypress run --env grepTags=@smoke && npm run report:create",
+    "cy:run:regression": "npm run clean:reports && cypress run --env grepTags=@regression && npm run report:create",
+    "test:full": "npm run clean:reports && cypress run && npm run report:create",
+    "test:api": "npm run clean:reports && cypress run --spec \"cypress/e2e/backend/**/*\" && npm run report:create",
+    "test:smoke": "npm run clean:reports && cypress run --env grepTags=@smoke && npm run report:create",
+    "test:chrome": "npm run clean:reports && cypress run --browser chrome && npm run report:create",
+    "cy:setup": "cypress run --spec 'cypress/e2e/backend/00-setup.cy.ts'",
+    "cy:setup:headless": "cypress run --spec 'cypress/e2e/backend/00-setup.cy.ts' --headless",
+    "cy:setup:memory": "cypress run --spec 'cypress/e2e/backend/00-setup.cy.ts' --headless",
+    "test:api:memory": "npm run clean:reports && cypress run --spec 'cypress/e2e/backend/**/*' && npm run report:create",
+    "test:api:with-setup": "npm run cy:setup && npm run cy:run:api && npm run report:merge",
+    "test:full:memory": "npm run clean:reports && cypress run --spec 'cypress/e2e/backend/**/*' && npm run report:create",
+    "test:full:with-setup": "npm run cy:setup && npm run test:full",
+    "test:runner": "echo \"🎯 TestRunner - Classe utilitária para execução estruturada de testes\" && echo \"\" && echo \"Exemplos de uso no código:\" && echo \"  import { testRunner } from '../support/TestRunner';\" && echo \"  testRunner.runAllTests();\" && echo \"  testRunner.runApiTests();\" && echo \"  testRunner.runSmokeTests();\" && echo \"\" && echo \"Comandos Cypress disponíveis:\" && echo \"  cy.runAllTestSuites()\" && echo \"  cy.runApiTestSuites()\" && echo \"  cy.runSmokeTestSuites()\" && echo \"  cy.validateTestEnvironment()\" && echo \"\" && echo \"📖 Veja documentação completa em: cypress/support/TestRunner.ts\"",
+    "test:runner:demo": "echo \"🚀 TestRunner Demo - Executando validação de ambiente...\" && cypress run --spec 'cypress/e2e/backend/debug.cy.ts' --env grepTags=debug --quiet",
+    "report:advanced": "node -e \"const generator = require('./cypress/plugins/html-report-generator.js'); generator.generateAdvancedReport('.');\"",
+    "report:merge": "npx mochawesome-merge cypress/reports/mochawesome/.jsons/*.json -o cypress/reports/merged.json",
+    "report:generate": "marge cypress/reports/merged.json --reportDir cypress/reports --reportFilename relatorio-padrao --inline",
+    "report:create": "npm run report:merge && npm run report:generate && npm run report:advanced",
+    "report:open": "echo \"Relatório Padrão disponível em: cypress/reports/relatorio-padrao.html\" && echo \"Relatório Avançado disponível em: cypress/reports/advanced-report.html\"",
     "report:full": "npm run report:create && npm run report:open",
     "clean:reports": "node -e \"const fs = require('fs'); const path = require('path'); try { const dir = 'cypress/reports/mochawesome'; if (fs.existsSync(dir)) { fs.readdirSync(dir).filter(f => f.endsWith('.json')).forEach(f => fs.unlinkSync(path.join(dir, f))); } ['cypress/reports/merged.json', 'cypress/reports/merged.html'].forEach(f => { if (fs.existsSync(f)) fs.unlinkSync(f); }); ['cypress/reports/html', 'cypress/reports/cypress'].forEach(d => { if (fs.existsSync(d)) fs.rmSync(d, {recursive: true, force: true}); }); console.log('Relatórios limpos com sucesso!'); } catch(e) { console.log('AVISO - Erro na limpeza:', e.message); }\"",
-    "clean:reports:full": "powershell -Command \"Remove-Item 'cypress/reports' -Recurse -Force -ErrorAction SilentlyContinue; Remove-Item 'cypress/screenshots' -Recurse -Force -ErrorAction SilentlyContinue; Remove-Item 'cypress/videos' -Recurse -Force -ErrorAction SilentlyContinue\"",
+    "clean:reports:full": "node -e \"const fs = require('fs'); ['cypress/reports', 'cypress/screenshots', 'cypress/videos'].forEach(d => { if (fs.existsSync(d)) fs.rmSync(d, {recursive: true, force: true}); }); console.log('Limpeza completa realizada!');\"",
     "clean:cache": "cypress cache clear",
     "install:cypress": "cypress install",
     "verify:cypress": "cypress verify",
@@ -44,12 +55,14 @@
     "@types/node": "^22.15.22",
     "cypress": "^14.4.0",
     "cypress-mochawesome-reporter": "^3.8.2",
-    "cypress-multi-reporters": "^2.0.5",
+    "dotenv": "^16.5.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^5.0.0",
     "mochawesome-report-generator": "^6.2.0",
-    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "axios": "^1.9.0"
   }
 }
