--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -174,6 +174,36 @@
 			"runOptions": {
 				"runOn": "folderOpen"
 			}
+		},
+		{
+			"label": "Generate Report and Open with Live Preview",
+			"type": "shell",
+			"command": "node",
+			"args": [
+				"generate-report.js"
+			],
+			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared"
+			}
+		},
+		{
+			"label": "Open HTML Report Live Preview",
+			"type": "shell",
+			"command": "echo",
+			"args": [
+				"Report available at: cypress/reports/advanced-report.html"
+			],
+			"group": "build",
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared"
+			}
 		}
 	]
 }
