--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "test:api:with-setup": "npm run cy:setup && npm run cy:run:api && npm run report:merge",
     "test:full:memory": "npm run clean:reports && cypress run --spec 'cypress/e2e/backend/**/*' && npm run report:create",
     "test:full:with-setup": "npm run cy:setup && npm run test:full",
-    "test:runner": "echo \"🎯 TestRunner - Classe utilitária para execução estruturada de testes\" && echo \"\" && echo \"Exemplos de uso no código:\" && echo \"  import { testRunner } from '../support/TestRunner';\" && echo \"  testRunner.runAllTests();\" && echo \"  testRunner.runApiTests();\" && echo \"  testRunner.runSmokeTests();\" && echo \"\" && echo \"Comandos Cypress disponíveis:\" && echo \"  cy.runAllTestSuites()\" && echo \"  cy.runApiTestSuites()\" && echo \"  cy.runSmokeTestSuites()\" && echo \"  cy.validateTestEnvironment()\" && echo \"\" && echo \"📖 Veja documentação completa em: cypress/support/TestRunner.ts\"",
-    "test:runner:demo": "echo \"🚀 TestRunner Demo - Executando validação de ambiente...\" && cypress run --spec 'cypress/e2e/backend/debug.cy.ts' --env grepTags=debug --quiet",
+    "test:runner": "echo \"🎯 TestRunner - Execução estruturada de testes\" && echo \"\" && echo \"Uso básico:\" && echo \"  import { testRunner } from '../support/TestRunner';\" && echo \"  testRunner.runAllTests();   // Todos os testes\" && echo \"  testRunner.runApiTests();   // Apenas API\" && echo \"  testRunner.runSmokeTests(); // Apenas smoke\" && echo \"\" && echo \"📖 Documentação completa: cypress/support/TestRunner.ts\"",
+    "test:runner:demo": "echo \"🚀 Demo TestRunner - Executando testes debug...\" && cypress run --spec 'cypress/e2e/backend/debug.cy.ts' --env grepTags=debug --quiet",
     "report:advanced": "node -e \"const generator = require('./cypress/plugins/html-report-generator.js'); generator.generateAdvancedReport('.');\"",
     "report:merge": "npx mochawesome-merge cypress/reports/mochawesome/.jsons/*.json -o cypress/reports/merged.json",
     "report:generate": "marge cypress/reports/merged.json --reportDir cypress/reports --reportFilename relatorio-padrao --inline",
